[package]
name = "druid-test"
version = "0.1.0"
authors = ["Kerstin Humm <kerstin@erictapen.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = { path = "/home/kerstin/git/druid/druid" }
# druid = { git = "https://github.com/derekdreery/druid.git", ref = "wayland" }
druid = { git = "https://github.com/linebender/druid.git", ref = "master" }
# druid = "0.6.0"
